# ESP32_AD5933

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  burn.sh  imgui.ini  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
common/ad5933/ad5933_calibration/: CMakeLists.txt
common/ad5933/ad5933_calibration/lib/: calibration.cpp  tests.cpp
common/ad5933/ad5933_calibration/tests/: run_test_constructor.cpp
common/ad5933/ad5933_config/: CMakeLists.txt
common/ad5933/ad5933_config/lib/: config.cpp  tests.cpp
common/ad5933/ad5933_config/tests/: run_test_same_setters.cpp
common/ad5933/data/: CMakeLists.txt
common/ad5933/data/lib/: data.cpp  tests.cpp
common/ad5933/data/tests/: run_test_raw_phase.cpp
common/ad5933/debug_data/: CMakeLists.txt
common/ad5933/debug_data/lib/: debug_data.cpp
common/ad5933/masks/: CMakeLists.txt
common/ad5933/masks/lib/: maps.cpp  masks.cpp
common/ad5933/measurement/: CMakeLists.txt
common/ad5933/measurement/lib/: tests.cpp
common/ad5933/reg_addrs/: CMakeLists.txt
common/ad5933/temperature/: CMakeLists.txt
common/ad5933/uint_types/: CMakeLists.txt
common/ad5933_config/: CMakeLists.txt
common/ad5933_config/lib/: config.cpp  foo.cpp  maps.cpp  masks.cpp  tests.cpp
common/ad5933_config/tests/: run_test_array.cpp  run_test_different_setters.cpp
common/magic/: CMakeLists.txt
common/magic/lib/: packets.cpp
common/magic/tests/: commands_with_serde.cpp  event_variant_map.cpp  results_with_serde.cpp  run_check_for_0xFF.cpp  run_get_magic_packet_pointer.cpp  run_packet_duplication.cpp  tests.cpp
control_panel/: CMakeLists.txt  main.cpp
control_panel/ble_client/: CMakeLists.txt  main.cpp
control_panel/ble_client/lib/: child_main.cpp  cmd_listener.cpp  esp32_ad5933.cpp  init.cpp
control_panel/ble_client/tests/: tests.cpp
control_panel/include/gui/: boilerplate.hpp  run.hpp  top.hpp  ubuntu_sans_regular.hpp
control_panel/include/imgui_custom/: input_items.hpp  markdown.hpp  spinner.hpp
control_panel/include/implot_custom/: setup_axis_label.hpp
control_panel/include/json/: conversion.hpp  graph.hpp  settings.hpp
control_panel/include/legal/: all.hpp  boost.hpp  dear_imgui.hpp  fmt.hpp  gpl2.hpp  implot.hpp  json.hpp  nativefiledialog_extended.hpp  sdl3.hpp  semver.hpp  simpleble.hpp  sml.hpp  ubuntu_sans_fonts.hpp  utfconv.hpp
control_panel/include/misc/: channel.hpp  variant_tester.hpp
control_panel/include/simpleble/: SimpleBLE_Safe.h
control_panel/lib/ble_client/: CMakeLists.txt
control_panel/lib/gui/: boilerplate.cpp  run.cpp  top.cpp  ubuntu_sans_regular.cpp
control_panel/lib/imgui_custom/: input_items.cpp  markdown.cpp  spinner.cpp
control_panel/lib/implot_custom/: setup_axis_label.cpp
control_panel/lib/json/: conversion.cpp  settings.cpp
control_panel/lib/legal/: CMakeLists.txt  boost.cpp  dear_imgui.cpp  fmt.cpp  gen_source.py  gpl2.cpp  implot.cpp  json.cpp  nativefiledialog_extended.cpp  sdl3.cpp  semver.cpp  simpleble.cpp  sml.cpp  ubuntu_sans_fonts.cpp  utfconv.cpp
control_panel/misc/: dummy.cpp  notes.txt  shm_cleaner.cpp
fw/main/: CMakeLists.txt  main.cpp
fw/main/include/: auto_save_no_ble.hpp  default.hpp  sd_card.hpp
fw/main/include/ds3231/: ds3231.hpp
fw/main/lib/: auto_save_no_ble.cpp  default.cpp  sd_card.cpp
gui/: CMakeLists.txt  D_WIN32_WINNT.txt  imgui.ini  main.cpp
gui/ble_client/: CMakeLists.txt  main.cpp
gui/ble_client/lib/: child_main.cpp  cmd_listener.cpp  esp32_ad5933.cpp  init.cpp  ostream_overloads.cpp  shm.cpp  state_machine.cpp  states.cpp  test.cpp  worker.cpp
gui/ble_client/tests/: async_scan_connect.cpp  basic.cpp  basic_test.cpp  debug_program_debug_dump.cpp  sync_scan_connect.cpp  test.cpp  tests.cpp
gui/include/: ad5933_config.hpp  ble.hpp  boilerplate.hpp  imgui_sdl.hpp  types.hpp
gui/include/ble_client/: ble_client.hpp
gui/include/gui/: boilerplate.hpp  channel.hpp  dark_mode_switcher.hpp  imgui_sdl.hpp  run.hpp
gui/include/imgui_custom/: char_filters.hpp  input_items.hpp
gui/include/json/: conversion.hpp  graph.hpp  shm.hpp
gui/lib/: ad5933_config.cpp  ble.cpp  boilerplate.cpp  debug.cpp  imgui_sdl.cpp  measurement.cpp  spinner.cpp
gui/lib/ble_client/: ble_client.cpp
gui/lib/gui/: boilerplate.cpp  dark_mode_switcher.cpp  imgui_sdl.cpp  run.cpp  spinner.cpp
gui/lib/imgui_custom/: char_filters.cpp  markdown.cpp  spinner.cpp
gui/lib/json/: conversion.cpp  shm.cpp
gui/misc/: BLE_Client.shm.json  freq_sweep.vb  shm_cleaner.cpp  vypocty.txt
main/: CMakeLists.txt  ad5933.cpp  ad5933.hpp  ble.cpp  ble.hpp  ds3231.cpp  ds3231.hpp  i2c.hpp  idf_component.yml  main.cpp  util.cpp  util.hpp
main/ble_state_machine/: ble.cpp  ble_states.cpp  magic_packets.cpp  packet_types.cpp
main/ble_state_machine/include/: ble.hpp  ble_state_machine.hpp  ble_states.hpp  magic_packets.hpp  packet_types.hpp
main/ble_state_machine/state_machine/: state_derived.hpp  state_machine.hpp
main/include/: sd_card.hpp  util.hpp
main/include/ad5933/: ad5933.hpp  register_addrs.hpp
main/include/ble/: ble.hpp  ble_server.hpp  chars.hpp  services.hpp  uuids.hpp
main/include/i2c/: bus.hpp  device.hpp  i2c.hpp  register_addr.hpp
main/lib/: sd_card.cpp  util.cpp
main/lib/ad5933/: ad5933.cpp
main/lib/ble/: ble_server.cpp
main/lib/i2c/: CMakeLists.txt  bus.cpp  device.cpp  i2c.cpp  register_addr.cpp
main/lib/my_util/: CMakeLists.txt
main/sml_sm/: foo.cpp
main/sml_sm/include/: sender.hpp  state_machine.hpp
misc/ble_state_machine/: CMakeLists.txt  main.cpp  urazr
misc/ble_state_machine/include/: ble_state_machine.hpp  ble_states.hpp  magic_packets.hpp  packet_types.hpp
misc/ble_state_machine/lib/: ble_states.cpp  magic_packets.cpp  packet_types.cpp
misc/imgui_sdl2/: CMakeLists.txt  imgui.ini  main.cpp
misc/imgui_sdl2/include/: ad5933_config.hpp  ble.hpp  dark_mode_switcher.hpp  imgui_sdl.hpp  magic_packets.hpp  types.hpp
misc/imgui_sdl2/lib/: ad5933_config.cpp  ble.cpp  dark_mode_switcher.cpp  imgui_sdl.cpp  magic_packets.cpp
misc/imgui_sdl2/misc/: freq_sweep.vb  poznamky.txt
rcd2json/: CMakeLists.txt  main.cpp
(+1218 files in other folders)
